--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           <button for="color" class="numberColor">Mudar</button>
         </div>
       </div>
+      <footer>
+        <p>Feito por leonardo | Github:</p>
+        <a href="https://github.com/Marshalldt1/quiz-animes" target="_blank"><img src="img/github.png" width="20px" alt=""></a>
+      </footer>
     </div>
   </main>
 
